--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Ilyas Abdurrohim Portofolio -  Website ini berisi tentang portofolio saya selama bekerja dan website ini saya gunakan untuk belajar dalam hal coding</title>
+        <meta name="description" content="Saya Ilyas ganteng Website ini digunakan untuk membuat protofolio saya selama bekerja dan didalam webiste ini saya gunakan untuk menawarkan jasa pembuatan portofolio murah" />
+        <meta name="keywords" content="porto ilyas, ilyas ganteng, ilyas, portofolio bagus, jasa portofolio murah" />
+        <meta name="author" content="Ilyas Abdurrohim" />
         <link rel="icon" type="image/x-icon" href="assets/img/user.jpg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
