--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Saya Ilyas ganteng Website ini digunakan untuk membuat protofolio saya selama bekerja dan didalam webiste ini saya gunakan untuk menawarkan jasa pembuatan portofolio murah" />
         <meta name="keywords" content="porto ilyas, ilyas ganteng, ilyas, portofolio bagus, jasa portofolio murah" />
         <meta name="author" content="Ilyas Abdurrohim" />
-        <link rel="icon" type="image/x-icon" href="assets/img/user.jpg" />
+        <link rel="icon" type="img-fluid img-profile rounded-circle mx-auto mb-2" href="assets/img/user.jpg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -26,7 +26,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">halooooo</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">about</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
